--- a/app/src/main/res/layout/moreplaceinfodialog.xml
+++ b/app/src/main/res/layout/moreplaceinfodialog.xml
@@ -87,22 +87,27 @@
             android:layout_height="25dp"
             android:layout_marginEnd="10dp"/>
 
-        <TextView
-            android:id="@+id/scstatusdialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/servicecharge"
-            android:textAlignment="center"
-            android:textColor="@color/textprimary"
-            android:textSize="20sp"
-            android:layout_marginEnd="10dp"/>
+    </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/servicetaxcheckdialog"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="10dp">
+
+        <ImageView
+            android:id="@+id/deliverystatusdialog"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/bookingicon"/>
+
+    <CheckBox
+        android:id="@+id/deliverycheckdialog"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="10dp"/>
 
     </LinearLayout>
 
