--- a/app/src/main/res/layout/menuitemadddialog.xml
+++ b/app/src/main/res/layout/menuitemadddialog.xml
@@ -34,7 +34,7 @@
         android:layout_weight="1"/>
 
     <ImageButton
-        android:id="@+id/imageView"
+        android:id="@+id/sendfooditem"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_gravity="center"
