--- a/app/src/main/res/layout/recommendationcardview.xml
+++ b/app/src/main/res/layout/recommendationcardview.xml
@@ -5,11 +5,11 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/testcardview"
         android:layout_width="350dp"
         android:layout_height="200dp"
-        android:id="@+id/testcardview"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center|top">
+        android:layout_gravity="center|top"
+        android:layout_marginTop="10dp">
 
 
         <RelativeLayout
@@ -28,7 +28,7 @@
             <TextView
                 android:id="@+id/testtext"
                 android:layout_width="136dp"
-                android:layout_height="56dp"
+                android:layout_height="52dp"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/testphoto"
                 android:textSize="25sp" />
@@ -36,37 +36,48 @@
             <TextView
                 android:id="@+id/testsubtext"
                 android:layout_width="137dp"
-                android:layout_height="66dp"
-                android:layout_alignParentBottom="true"
+                android:layout_height="53dp"
+                android:layout_alignParentTop="true"
                 android:layout_alignStart="@+id/testtext"
-                android:layout_marginBottom="26dp"
-                android:textSize="15dp" />
+                android:layout_marginTop="61dp"
+                android:textSize="15sp" />
+
+            <ImageButton
+                android:id="@+id/cardviewbutton"
+                android:layout_width="48dp"
+                android:layout_height="40dp"
+                android:layout_alignBottom="@+id/testphoto"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="45dp"
+                android:background="@drawable/roundedbutton"
+                android:src="@drawable/gotomap" />
 
 
         </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/strokecolor"
-            android:layout_gravity="bottom"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/strokecolor"
-            android:layout_gravity="top"/>
+            android:layout_gravity="bottom"
+            android:background="@color/strokecolor" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="top"
+            android:background="@color/strokecolor" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/strokecolor"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            android:background="@color/strokecolor" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/strokecolor"
-            android:layout_gravity="end"/>
+            android:layout_gravity="end"
+            android:background="@color/strokecolor" />
 
     </android.support.v7.widget.CardView>
 
