09-08-2018 lots of changes new activities recommendation

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,8 +23,8 @@
     <SearchView
         android:id="@+id/mapsearch"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/common_google_signin_btn_text_dark_default"
+        android:layout_height="50dp"
+        android:background="@drawable/rounddialog"
         android:closeIcon="@drawable/cancel_dark"
         android:elevation="5dp"
         android:inputType="text"
