--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="textgreen">#39CD0E</color>
     <color name="mainbackground">#303030</color>
     <color name="receivemessageblue">#091C57</color>
-    <color name="sendmessagegreen">#0A5709</color>
+    <color name="sendmessagegreen">#ff6e00</color>
 </resources>
