--- a/app/src/main/res/layout/sentmessagelayout.xml
+++ b/app/src/main/res/layout/sentmessagelayout.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="wrap_content"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/roundedsendmessage"
-    android:layout_gravity="end">
+    android:paddingTop="8dp">
 
     <TextView
-        android:id="@+id/sentmessage"
-        android:layout_width="match_parent"
+        android:id="@+id/text_message_body_sent"
+        android:text="hello, hello!"
+        android:background="@drawable/roundedsendmessage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textAlignment="textStart"
-        android:text="@string/test"
-        android:padding="10dp"
-        android:textColor="@color/textprimary"/>
+        android:maxWidth="300dp"
+        android:padding="8dp"
+        android:textColor="#ffffff"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="15sp"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/text_message_time_sent"
+        android:text="11:40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:layout_marginRight="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/text_message_body_sent"
+        app:layout_constraintRight_toLeftOf="@+id/text_message_body_sent" />
+
+</android.support.constraint.ConstraintLayout>
