--- a/app/src/main/res/layout/activity_chatactivity.xml
+++ b/app/src/main/res/layout/activity_chatactivity.xml
@@ -12,12 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginBottom="0dp"
         android:background="@color/colorAccent"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/messagelist">
 
         <Button
             android:id="@+id/chatback"
@@ -32,7 +32,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
-            android:text="@string/chat"
+            android:text="@string/chatbot"
             android:textAlignment="center"
             android:textColor="@color/textprimary"
             android:textSize="20sp" />
@@ -41,14 +41,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messagelist"
         android:layout_width="match_parent"
-        android:layout_height="464dp"
+        android:layout_height="497dp"
         android:layout_marginBottom="8dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="1.0"></android.support.v7.widget.RecyclerView>
 
     <!-- A horizontal line between the chatbox and RecyclerView -->
