--- a/app/src/main/res/layout/sentmessagelayout.xml
+++ b/app/src/main/res/layout/sentmessagelayout.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/text_message_body_sent"
         android:text="hello, hello!"
-        android:background="@drawable/roundedsendmessage"
+        android:background="@drawable/message_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="300dp"
