--- a/app/src/main/res/layout/activity_chatactivity.xml
+++ b/app/src/main/res/layout/activity_chatactivity.xml
@@ -66,7 +66,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounddialog"
-        android:minHeight="35dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -82,7 +81,8 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="@string/messagehint"
-            android:maxLines="6" />
+            android:maxLines="6"
+            android:minHeight="18dp"/>
 
         <ImageButton
             android:id="@+id/btnSend"
